refactor: item dto request/response 분리